GNOME Bugzilla – Bug 740138
Fix SSH key generation
Last modified: 2014-11-15 18:06:15 UTC
The ui file for ssh key generation was invalid.
Created attachment 290728 [details] [review] Don't hide GtkBuilder errors This makes it unnecessarily hard to track down invalid ui files.
Created attachment 290729 [details] [review] ssh generation: Fix invalid ui file GtkGrid does not have :n-rows or :n-columns properties.
Review of attachment 290728 [details] [review]: Looks good to commit once this is resolved. ::: libseahorse/seahorse-widget.c @@ +275,3 @@ + if (error) + { + g_warning ("ERROR! %s\n", error->message); Could you list the path name for easier debugging? Or does error already contain it?
Review of attachment 290729 [details] [review]: Looks good to me. Thanks!
Created attachment 290730 [details] [review] Don't hide GtkBuilder errors This makes it unnecessarily hard to track down invalid ui files.
Review of attachment 290730 [details] [review]: ::: libseahorse/seahorse-widget.c @@ +275,3 @@ + if (error) + { + g_warning ("Error parsing %s: %s\n", path, error->message); The newline is unnecessary. Suggest removing it before you push.
Attachment 290729 [details] pushed as 78c4a96 - ssh generation: Fix invalid ui file Attachment 290730 [details] pushed as 5352602 - Don't hide GtkBuilder errors
*** Bug 740137 has been marked as a duplicate of this bug. ***
This is still broken, as there is one more place in this file using these properties. At least now it shows the new error message ... (seahorse:11765): seahorse-WARNING **: Error parsing /home/gnomedev/jhbuild/install/share/seahorse/ui//seahorse-ssh-generate.xml: Invalid property: GtkGrid.n_rows on line 282 (seahorse:11765): seahorse-WARNING **: could not find widget algorithm-choice for seahorse-ssh-generate.xml (seahorse:11765): GLib-GObject-WARNING **: invalid (NULL) pointer instance (seahorse:11765): GLib-GObject-CRITICAL **: g_signal_connect_data: assertion 'G_TYPE_CHECK_INSTANCE (instance)' failed (seahorse:11765): seahorse-WARNING **: could not find widget algorithm-choice for seahorse-ssh-generate.xml (seahorse:11765): seahorse-CRITICAL **: seahorse_ssh_generate_show: assertion 'widget != NULL' failed By the way, n_columns and n_rows are used all over the place: git grep n_columns | grep \.xml gkr/seahorse-gkr-add-item.xml: <property name="n_columns">2</property> gkr/seahorse-gkr-item-properties.xml: <property name="n_columns">2</property> gkr/seahorse-gkr-keyring.xml: <property name="n_columns">2</property> libseahorse/seahorse-add-keyserver.xml: <property name="n_columns">2</property> libseahorse/seahorse-prefs.xml: <property name="n_columns">2</property> pgp/seahorse-add-subkey.xml: <property name="n_columns">3</property> pgp/seahorse-add-uid.xml: <property name="n_columns">2</property> pgp/seahorse-pgp-generate.xml: <property name="n_columns">2</property> pgp/seahorse-pgp-generate.xml: <property name="n_columns">2</property> pgp/seahorse-pgp-private-key-properties.xml: <property name="n_columns">2</property> pgp/seahorse-pgp-private-key-properties.xml: <property name="n_columns">2</property> pgp/seahorse-pgp-private-key-properties.xml: <property name="n_columns">2</property> pgp/seahorse-pgp-private-key-properties.xml: <property name="n_columns">2</property> pgp/seahorse-pgp-public-key-properties.xml: <property name="n_columns">2</property> pgp/seahorse-pgp-public-key-properties.xml: <property name="n_columns">2</property> pgp/seahorse-pgp-public-key-properties.xml: <property name="n_columns">2</property> pgp/seahorse-revoke.xml: <property name="n_columns">2</property> src/seahorse-change-passphrase.xml: <property name="n_columns">2</property> src/seahorse-key-manager.xml: <property name="n_columns">2</property> ssh/seahorse-ssh-key-properties.xml: <property name="n_columns">2</property> ssh/seahorse-ssh-key-properties.xml: <property name="n_columns">2</property> ssh/seahorse-ssh-upload.xml: <property name="n_columns">2</property>
GtkTable has n-columns and n-rows properties, GtkGrid doesn't.
(In reply to comment #10) > GtkTable has n-columns and n-rows properties, GtkGrid doesn't. Indeed, I'm relieved the problem isn't that big. I grep-ed all *.xml files in seahorse now and can confirm that after your follow up commit [0], the only objects still using n_rows and n_columns properties are GtkTables. [0] https://git.gnome.org/browse/seahorse/commit/?id=6650aadbcd7d175786c8a1b25b35f46467141cd8