Don't hide GtkBuilder errors

This makes it unnecessarily hard to track down invalid
ui files.

https://bugzilla.gnome.org/show_bug.cgi?id=740138